About page Mission and Spacing fix

--- a/about-style.css
+++ b/about-style.css
@@ -78,7 +78,7 @@ section h2 {
   color: #00274d;
 }
 
-section p, section p2, section p3, section p4,  section ul li {
+section p, section ul li {
   font-size: 1.1em;
   line-height: 1.6;
   margin-bottom: 20px
